--- a/requirements.txt
+++ b/requirements.txt
@@ -26,10 +26,11 @@ aiosignal>=1.1.2
 anyio<5.0,>=3.0
 h11<0.15,>=0.13
 exceptiongroup>=1.0.2
+python-dotenv>=1.0.0
 discord>=2.3.2
 yt-dlp>=2023.9.24
 youtube-search-python>=1.6.6
 ffmpeg>=1.4
 flask>=2.3.3
-PyNaCl>=1.5.0
+pynacl>=1.5.0
 waitress>=2.1.2
