--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,58 @@
-mutagen>=1.47.0
-pycryptodomex>=3.19.0
-websockets>=1.0.3
-certifi>=2023.7.22
-brotli>=1.1.0
-httpx>=0.25.0
-Werkzeug>=2.3.7
-Jinja2>=3.1.2
-itsdangerous>=2.1.2
-click>=8.1.3
-blinker>=1.6.2
-cffi>=1.4.1
-pycparser>=2.21
-aiohttp<4,>=3.7.4
-httpcore<0.19.0,>=0.18.0
-idna>=3.4
-sniffio>=1.3.0
-MarkupSafe>=2.0
-attrs>=17.3.0
-charset-normalizer<4.0,>=2.0
-multidict<7.0,>=4.5
-async-timeout<5.0,>=4.0.0a3
-yarl<2.0,>=1.0
-frozenlist>=1.1.1
-aiosignal>=1.1.2
-anyio<5.0,>=3.0
-h11<0.15,>=0.13
-exceptiongroup>=1.0.2
-python-dotenv>=1.0.0
-discord>=2.3.2
-yt-dlp>=2023.9.24
-youtube-search-python>=1.6.6
-ffmpeg>=1.4
-flask>=2.3.3
-pynacl>=1.5.0
-waitress>=2.1.2
-requests>=2.31.0
-beautifulsoup4>=4.12.2
-spotipy>=2.23.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+anyio==4.0.0
+async-timeout==4.0.3
+attrs==23.1.0
+beautifulsoup4==4.12.2
+black==23.9.1
+blinker==1.6.2
+Brotli==1.1.0
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.0
+click==8.1.7
+colorama==0.4.6
+discord==2.3.2
+discord.py==2.3.2
+distlib==0.3.7
+exceptiongroup==1.1.3
+ffmpeg==1.4
+filelock==3.12.4
+Flask==3.0.0
+frozenlist==1.4.0
+h11==0.14.0
+httpcore==0.18.0
+httpx==0.25.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+multidict==6.0.4
+mutagen==1.47.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
+pluggy==1.3.0
+pycparser==2.21
+pycryptodomex==3.19.0
+PyNaCl==1.5.0
+pyproject-api==1.6.1
+python-dotenv==1.0.0
+redis==5.0.1
+requests==2.31.0
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+spotipy==2.23.0
+tox==4.11.3
+urllib3==2.0.5
+virtualenv==20.24.5
+waitress==2.1.2
+websockets==11.0.3
+Werkzeug==3.0.0
+yarl==1.9.2
+youtube-search-python==1.6.6
+yt-dlp==2023.9.24
