--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ ffmpeg==1.4
 filelock==3.12.4
 Flask==3.0.0
 frozenlist==1.4.0
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==0.18.0
 httpx==0.25.0
@@ -40,17 +41,18 @@ pycparser==2.21
 pycryptodomex==3.19.0
 PyNaCl==1.5.0
 pyproject-api==1.6.1
-python-dotenv==1.0.0
 redis==5.0.1
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
+sphinx==7.2.6
 spotipy==2.23.0
+tomli==2.0.1
 tox==4.11.3
+typing_extensions==4.8.0
 urllib3==2.0.5
 virtualenv==20.24.5
-waitress==2.1.2
 websockets==11.0.3
 Werkzeug==3.0.0
 yarl==1.9.2
