--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pycparser==2.21
 pycryptodomex==3.19.1
 PyNaCl==1.5.0
 pyproject-api==1.6.1
+python-dotenv==1.0.0
 redis==5.0.1
 requests==2.31.0
 six==1.16.0
